<resources>
    <string name="app_name">结算台</string>
    <string name="store_start_calculate">开始结算</string>
    <string name="store_face_verify">刷脸认证</string>
    <string name="store_goods_scan">物资扫码</string>
    <string name="store_goods_out">物资出库</string>
    <string name="store_select_verify_title">请选择验证方式</string>
    <string name="store_verify_by_face">刷脸登录</string>
    <string name="store_verify_by_code">输入领料单号</string>
    <string name="store_operation_cancel">取消操作</string>
    <string name="store_delete">删除</string>
    <string name="store_out_title_tip">确认出库吗？</string>
    <string name="store_prompt_title">提示</string>
    <string name="store_goods_invalid_tip">该物资不在领料单范围内，请归还至原货架库位。</string>
    <string name="store_input_code_title">请输入物资编码</string>
    <string name="store_input_code_tip">物资编码输入错误</string>
    <string name="account_login_title">账号登录</string>
    <string name="account_user_invalid_tip">账号或密码错误</string>
    <string name="account_user_empty_tip">请输入账号或密码</string>
    <string name="goods_delete_auth_title">删除物资授权</string>
    <string name="goods_delete_title_tip">确定删除物资吗？</string>
    <string name="scan_code_hint">请扫物资二维码</string>
    <string name="out_store_success">出库成功</string>
    <string name="out_store_failed">出库失败</string>
    <string name="no_pick_hint">抱歉，您当前并无待领料单</string>
    <string name="go_home">返回首页</string>
    <string name="server_ip">IP地址：</string>
    <string name="server_port">端口号：</string>
    <string name="store_verify_by_account">账户登录</string>
    <string name="face_verify_failed">识别失败，请选择账户登录或者重新识别</string>
    <string name="store_server_exception">服务器异常</string>
    <string name="store_goods_empty_hint">请选择出库物资</string>
</resources>